# mockcliv3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AllCommands.h  CmdExecutor.h  ErrorHandler.h  ErrorTypes.h  FileManipulation.h  Functions.h  ICommand.h  InputHandler.h  Parser.h
include/Commands/: Batch.h  Date.h  Echo.h  Head.h  Prompt.h  Rm.h  Time.h  Touch.h  Tr.h  Truncate.h  Wc.h
src/: cmdexecutor.cpp  errorhandler.cpp  fileManipulation.cpp  functions.cpp  inputHandler.cpp  parser.cpp
src/commands/: batch.cpp  date.cpp  echo.cpp  head.cpp  prompt.cpp  rm.cpp  time.cpp  touch.cpp  tr.cpp  truncate.cpp  wc.cpp
